// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IfDashboard should not render children without context 1`] = `
<div>
  <span>
    I must not fear.
  </span>
  <IfDashboard />
</div>
`;

exports[`IfDashboard should not render children without dashboard context 1`] = `
Array [
  <span>
    I must not fear.
  </span>,
  <IfDashboard />,
]
`;

exports[`IfDashboard should render children with dashboard context 1`] = `
Array [
  <span>
    I must not fear.
  </span>,
  <IfDashboard>
    <span>
      Fear is the mind-killer.
    </span>
  </IfDashboard>,
]
`;
